@@ -1,3 +1,7 @@
+2009-08-5 Ivan Kartolo <ivan.kartolo@dkd.de>
+	* Fixed bug: PID of the recipient list should not be check when fetching the recipient.
+	* Fixed bug: using trimExplode on exploding the list of fields (while replacing the marker in newsletter)
+	
 2009-07-19 Ivan Kartolo <ivan.kartolo@dkd.de>
 	* Fixed bug: label in mailer engine.
 
